syntax = "proto3";
package personal;

import "github.com/wulungtry/techtalk/api/proto/response/response.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "person";

message AddPersonModel {
    string PersonalId = 1;
    string Name = 2;
    string CityOfBirth = 3;
    google.protobuf.Timestamp DateOfBirth = 4;
    int32 Height = 5;
    int32 Weight = 6;
    bool IsMarried = 7;
}

service PersonalService {
    rpc AddPerson(AddPersonModel) returns (response.ResponseBase) {
        option (google.api.http) = {
            post: "/personal/person"
            body: "*"
        };
    }
}