syntax = "proto3";
package response;

import "google/protobuf/any.proto";

option go_package = "response";

message ResponseBase {
    enum StatusCode {
        FAIL = 0;
        SUCCESS = 1;
    }
    StatusCode status = 1;
    string message = 2;
    google.protobuf.Any data = 3;
}
